--- a/doc/readme/環境構築と実行手順.md
+++ b/doc/readme/環境構築と実行手順.md
@@ -24,13 +24,13 @@ make
 #### 正常系テスト
 有効なマップファイルを指定して実行します。
 ```bash
-./cub3D assets/maps/valid/test.cub
+./cub3D assets/maps/valid/test_valid_21_test.cub
 ```
 
 #### 異常系テスト
 プレイヤーが存在しない無効なマップなどの挙動を確認します。
 ```bash
-./cub3D assets/maps/valid/no_player.cub
+./cub3D assets/maps/invalid/test_invalid_40_no_player.cub
 ```
 *(期待値: "Error" メッセージが表示され、正しく終了すること)*
 
@@ -49,13 +49,13 @@ make
 #### 正常系テスト
 ボーナス機能確認用のマップを使用します。
 ```bash
-./cub3D assets/maps/valid/bonus.cub
+./cub3D assets/maps/valid/test_valid_09_bonus.cub
 ```
 
 #### 異常系テスト
 壁が閉じていないマップでの挙動を確認します。
 ```bash
-./cub3D assets/maps/valid/not_closed_bonus.cub
+./cub3D assets/maps/invalid/test_invalid_80_not_closed_bonus.cub
 ```
 *(期待値: "Error" メッセージが表示され、正しく終了すること)*
 
@@ -64,5 +64,5 @@ make
 Valgrindを使用してメモリリークがないかを確認します。
 
 ```bash
-valgrind -s --track-origins=yes --leak-check=full --show-leak-kinds=all ./cub3D assets/maps/valid/bonus.cub
+valgrind -s --track-origins=yes --leak-check=full --show-leak-kinds=all ./cub3D assets/maps/valid/test_valid_09_bonus.cub
 ```
