--- a/doc/readme/環境構築と実行手順.md
+++ b/doc/readme/環境構築と実行手順.md
@@ -7,7 +7,7 @@
 リポジトリのクローンと、サブモジュール（MiniLibX等の依存ライブラリ）の初期化を行います。
 
 ```bash
-git clone https://github.com/hryamaoka/cub3d_tmp.git
+git clone https://github.com/hryamaoka/cud3d_tmp3.git
 cd cub3d_tmp
 git submodule update --init --recursive
 ```
